YAML-STANDARD/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - kubernetes-stand.matiasroje-devops.dns-dynamic.net
      secretName: fastapi-tls
  rules:
    - host: kubernetes-stand.matiasroje-devops.dns-dynamic.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 5000
