YAML-STANDARD/apinetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: apinetwork
  namespace: standard
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/apinetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/apinetwork: "true"
